--- a/dev/src/sass/main.scss
+++ b/dev/src/sass/main.scss
@@ -34,7 +34,7 @@
 @import 'blocks/b-bottomNavigation';
 @import 'blocks/b-siteCopyright';
 @import 'blocks/b-developerCopyright';
-
+@import 'blocks/b-categoryList';
 
 /**
  * Print styles
