--- a/dev/src/sass/blocks/_b-categoryList.scss
+++ b/dev/src/sass/blocks/_b-categoryList.scss
@@ -1,4 +1,7 @@
-.texxt {
-    color:aqua;
-    background-color: black;
+/**
+ * @section categoryList
+ */
+
+.b-categoryList {
+    background-color: aqua;
 }
