--- a/dev/src/sass/_settings.scss
+++ b/dev/src/sass/_settings.scss
@@ -8,3 +8,5 @@ $site-width-mobile: 640px;
 $breakpoint-desktop: 'min-width: #{$site-width}';
 $breakpoint-tablet:  'min-width: #{$site-width-tablet}) and (max-width: #{$site-width - 1px}';
 $breakpoint-mobile:  'max-width: #{$site-width-tablet - 1px}';
+
+/* Colors */
