--- a/dev/src/sass/blocks/_b-categoryList.scss
+++ b/dev/src/sass/blocks/_b-categoryList.scss
@@ -2,6 +2,59 @@
  * @section categoryList
  */
 
-.b-categoryList {
-    background-color: aqua;
+
+ul {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+.menu-buttons {
+    display:flex;
+    flex-wrap: wrap;
+    padding-top: 80px;
+    padding-bottom: 90px;
+}
+
+.buttons-items {
+    width:218px;
+    height:80px;
+    background-color: #F2FAFE;
+    border: 1px solid #18B0B6;
+    border-radius: 5px;
+    margin-right: 20px;
+
+}
+.buttons-items:nth-child(5n) {
+    margin-right:0px;
+}
+
+.buttons-items:nth-child(-n + 5) {
+    margin-bottom: 20px;
+}
+
+.buttons-items-link {
+    width: 218px;
+    height: 80px;
+    display: flex;
+    font-size: 21px;
+    color: #27272E;
+}
+
+
+.buttons-items-link:hover{
+background: linear-gradient(180deg, #AF68C2 0%, #89429C 100%);
+border-radius: 5px;
+color:#FFFFFF;
+}
+
+.regular-customers-svg {
+width:28px;
+height:28px;
+margin-top: 26px;
+margin-left: 25px;
+display: flex;
+
 }
