--- a/dev/src/sass/blocks/_b-siteCopyright.scss
+++ b/dev/src/sass/blocks/_b-siteCopyright.scss
@@ -3,7 +3,7 @@
  */
 .l-siteCopyright {
   color: #464646;
-  font: 11px $Arial;
+  font: 11px $Inter;
 }
 .b-siteCopyright {
   margin: 15px 0;
@@ -14,3 +14,4 @@
     color: inherit;
   }
 }
+
