--- a/dev/src/sass/blocks/_b-categoryList.scss
+++ b/dev/src/sass/blocks/_b-categoryList.scss
@@ -5,6 +5,7 @@
 
 ul {
     list-style-type: none;
+    padding: 0;
 }
 
 a {
@@ -16,14 +17,13 @@ a {
     flex-wrap: wrap;
     padding-top: 80px;
     padding-bottom: 90px;
+    margin-left: 135px;
 }
 
 .buttons-items {
     width:218px;
     height:80px;
     background-color: #F2FAFE;
-    border: 1px solid #18B0B6;
-    border-radius: 5px;
     margin-right: 20px;
 
 }
@@ -41,6 +41,8 @@ a {
     display: flex;
     font-size: 21px;
     color: #27272E;
+    border: 1px solid #18B0B6;
+    border-radius: 5px;
 }
 
 
@@ -48,6 +50,7 @@ a {
 background: linear-gradient(180deg, #AF68C2 0%, #89429C 100%);
 border-radius: 5px;
 color:#FFFFFF;
+border:none;
 }
 
 .regular-customers-svg {
@@ -56,5 +59,5 @@ height:28px;
 margin-top: 26px;
 margin-left: 25px;
 display: flex;
-
 }
+
