--- a/dev/src/sass/blocks/_b-siteHeader.scss
+++ b/dev/src/sass/blocks/_b-siteHeader.scss
@@ -6,4 +6,7 @@
 }
 .b-siteHeader {
   @include clearfix;
+  width: 1440px;
+  height: 500px;
+  background-image: url(/assets/img/blocks/background-header.png);
 }
