--- a/dev/src/sass/main.scss
+++ b/dev/src/sass/main.scss
@@ -35,6 +35,7 @@
 @import 'blocks/b-siteCopyright';
 @import 'blocks/b-developerCopyright';
 @import 'blocks/b-categoryList';
+@import 'blocks/b-contentCategories';
 
 /**
  * Print styles
