--- a/dev/src/sass/main.scss
+++ b/dev/src/sass/main.scss
@@ -36,6 +36,15 @@
 @import 'blocks/b-developerCopyright';
 @import 'blocks/b-categoryList';
 @import 'blocks/b-contentCategories';
+@import 'blocks/l-contentNews';
+@import 'blocks/b-contentArticles';
+@import 'blocks/b-contentEvents';
+@import 'blocks/l-contentLeftColumn';
+@import 'blocks/l-contentRightColumn';
+@import 'blocks/l-siteFooterBlock';
+@import 'blocks/b-siteAdress';
+@import 'blocks/b-siteContacts';
+@import 'blocks/b-siteQuickLinks';
 
 /**
  * Print styles
