--- a/dev/src/sass/_mixins.scss
+++ b/dev/src/sass/_mixins.scss
@@ -113,3 +113,12 @@
     @content;
   }
 }
+
+@mixin wrapper-inner {
+  margin:0 auto;
+  padding-left: 135px;
+  padding-right: 135px;
+  width:100%;
+  max-width: 1440px;
+  box-sizing:border-box;
+}
