--- a/dev/src/sass/blocks/_b-mainNavigation.scss
+++ b/dev/src/sass/blocks/_b-mainNavigation.scss
@@ -1,33 +1,37 @@
 /**
  * @section mainNavigation
  */
-.l-mainNavigation {
-  clear: both;
-  width: 100%;
-  height: 50px;
-}
 .b-mainNavigation {
-  display: block;
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  list-style: none;
+  display: flex;
+  list-style-type: none;
 
-  &__item {
-    position: relative;
-    float: left;
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    color: #000;
 
-    &.-state_active {
 
-    }
+  &__list {
+  color: #FFFFFF;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 2.22;
+
   }
+
+    &__list:first-child{
+     padding-right: 39px;
+     margin-right: 39px;
+     border-right:1px solid rgba(100%, 100%, 100%, 0.41);
+     }
+
+
+    &__list:last-child {
+   padding-left: 39px;
+    margin-left: 39px;
+    border-left: 1px solid rgba(100%, 100%, 100%, 0.41);
+    }
 
   &__link {
-    @include hover-underline;
-    display: block;
+  text-decoration: none;
+    color: #FFFFFF;
   }
+
 }
