--- a/dev/src/sass/blocks/_b-siteHeader.scss
+++ b/dev/src/sass/blocks/_b-siteHeader.scss
@@ -1,12 +1,9 @@
 /**
  * @section siteHeader
  */
-.l-siteHeader {
-  position: relative;
-}
 .b-siteHeader {
-  @include clearfix;
-  width: 1440px;
-  height: 500px;
-  background-image: url(/assets/img/blocks/backgroundImage/background-header.png);
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  border-bottom: 1px solid rgba(100%,100%,100%,0.31);
 }
