--- a/dev/src/sass/blocks/_b-contentArticles.scss
+++ b/dev/src/sass/blocks/_b-contentArticles.scss
@@ -5,7 +5,7 @@
     border-radius: 7px;
     margin-bottom: 20px;
 
-    &__h3 {
+    &__title {
     padding: 0;
     margin: 0;
     font-weight: 700;
