--- a/dev/src/sass/blocks/_b-contentLeftColumn.scss
+++ b/dev/src/sass/blocks/_b-contentLeftColumn.scss
@@ -2,7 +2,7 @@
   width: 550px;
   margin-right: 65px;
 
-  &__h2 {
+  &__title {
     font-weight: 700;
     font-size: 32px;
     line-height: 1.31;
