--- a/dev/src/sass/blocks/_b-contentRightColumn.scss
+++ b/dev/src/sass/blocks/_b-contentRightColumn.scss
@@ -1,7 +1,7 @@
 .b-contentRightColumn {
     width: 555px;
 
-    &__h2 {
+    &__title {
     font-weight: 700;
     font-size: 32px;
     line-height: 1.31;
