--- a/dev/src/sass/blocks/_b-contentEvents.scss
+++ b/dev/src/sass/blocks/_b-contentEvents.scss
@@ -13,7 +13,7 @@
     margin-bottom: 5px;
     }
 
-    &__h3 {
+    &__title {
     font-weight: 700;
     font-size: 18px;
     line-height: 1.36;
