--- a/dev/src/sass/blocks/_b-siteQuickLinks.scss
+++ b/dev/src/sass/blocks/_b-siteQuickLinks.scss
@@ -4,7 +4,7 @@
     line-height: 2;
     color: #FFFFFF;
 
-        &__h3 {
+        &__title {
         font-weight: 700;
         font-size: 21px;
         line-height: 1;
@@ -20,4 +20,14 @@
             line-height: 2;
             color: #FFFFFF;
         }
+        &__list {
+            margin:0px; 
+            padding:0px;
+            list-style:none;
+        }
+        &__item {
+             margin: 0px;
+             padding: 0px;
+        }
+
 }
