--- a/dev/src/sass/blocks/_b-contentArticles.scss
+++ b/dev/src/sass/blocks/_b-contentArticles.scss
@@ -37,7 +37,10 @@
         line-height: 1.44;
         color: #515050;
         max-width: 500px;
-    
     }
+
+                &__link {
+                    text-decoration: none;
+                }
 
 }
