--- a/dev/src/sass/blocks/_b-contentEvents.scss
+++ b/dev/src/sass/blocks/_b-contentEvents.scss
@@ -1,5 +1,5 @@
 .b-contentEvents {
-    padding: 20px 75px 20px 20px;
+    padding: 20px;
     background-color: #FFFFFF;
     box-shadow: 0px 4px 20px rgba(214, 214, 214, 0.3);
     border-radius: 7px;
@@ -35,7 +35,6 @@
     line-height: 1.47;
     color: #515050;
     margin-bottom: 17px;
-    max-width: 200px;
     }
 
     &__text {
@@ -44,5 +43,10 @@
         line-height: 1.47;
         color: #515050;
         max-width: 448px;
+      
     }
+
+        &__link {
+        text-decoration: none;
+        }
 }
