--- a/dev/src/sass/blocks/_b-contentCategories.scss
+++ b/dev/src/sass/blocks/_b-contentCategories.scss
@@ -1,79 +1,64 @@
 .b-contentCategories {
+    $block:&;
     display: flex;
     flex-wrap: wrap;
+    grid-gap:20px;
     padding-top: 80px;
     padding-bottom: 90px;
     @include wrapper-inner;
     list-style-type: none;
 
-    &__text {
-        margin-top: 28px;
-        margin-left: 63px;
-        font-weight: 500;
-        font-size: 21px;
-        line-height: 1.19;
-        color:#27272E;
+    &__item {
+        width: calc(100%/5 -20px);
     }
 
 
-    &__list {
-        background-color: #F2FAFE;
-        margin-right: 20px;
-        margin-bottom: 20px;
-        width: 218px;
-        height: 80px;
-    }
-
-    &__list:nth-child(5n) {
-        margin-right: 0px;
-    }
 
     &__link {
         display: flex;
+        align-items: center;
+        justify-content: center;
+        padding:26px 25px;
         background-color: #F2FAFE;
-        width: 218px;
-        height: 80px;
+        width: 100%;
         border-radius: 5px;
         border: 1px solid #18B0B6;
+        box-sizing: border-box;
         text-decoration: none;
-    }
-
-    &__link:hover {
-        display: flex;
+        
+        &:hover {
         background: linear-gradient(180deg, #AF68C2 0%, #89429C 100%);
-        border-radius: 5px;
-        color: #FFFFFF;
-        width: 218px;
-        height: 80px;
         border-color: transparent;
-    }
-
-    &__link &__icon {
-        position: absolute;
-        opacity: 1;
-        margin-left: 25px;
-        margin-top: 26px;
-    }
-
-    &__link &__iconHover {
-        position: absolute;
-        opacity: 0;
-        margin-left: 25px;
-        margin-top: 26px;
-    }
-
-    &__link:hover &__icon {
-        position: absolute;
-        opacity: 0;
-        margin-left: 25px;
-        margin-top: 26px;
+        } 
 
     }
 
-    &__link:hover &__iconHover {
-        position: absolute;
-        opacity: 1;
-        margin-left: 25px;
-        margin-top: 26px;
+    &__icon {
+     #{$block}__link:hover & {
+        display: none;
+     }
+ 
+     
+    }
+
+    &__iconHover {
+     display:none;
+
+        #{$block}__link:hover & {
+                display: block;
+            }
+ }
+
+    &__text {
+      margin-left: 10px;
+      font-weight: 500;
+      font-size: 21px;
+      line-height: 1.19;
+      color: #27272E;
+
+        #{$block}__link:hover & {
+                color:#FFFFFF;
+            }
+
     }
 }
