--- a/dev/src/sass/blocks/_b-siteHeader.scss
+++ b/dev/src/sass/blocks/_b-siteHeader.scss
@@ -4,6 +4,7 @@
 .b-siteHeader {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   position: absolute;
   border-bottom: 1px solid rgba(100%,100%,100%,0.31);
 }
