--- a/dev/src/sass/blocks/_l-siteLogo.scss
+++ b/dev/src/sass/blocks/_l-siteLogo.scss
@@ -1,8 +1,7 @@
 .l-siteLogo {
     
     &__logo {
-    margin-top: 14px;    
-    margin-bottom: 10px;
-    margin-right: 515px;
+    padding-top: 14px;    
+    padding-bottom: 10px;
                         }
 }
