--- a/dev/src/sass/main.scss
+++ b/dev/src/sass/main.scss
@@ -44,8 +44,7 @@
 @import 'blocks/b-contentText';
 @import 'blocks/b-siteFooterBlock';
 @import 'blocks/b-contentNews';
-@import 'blocks/b-contentRightColumn';
-@import 'blocks/b-contentLeftColumn';
+@import 'blocks/b-siteForm';
 
 @import 'blocks/l-siteHeader';
 @import 'blocks/l-firstScreen';
