--- a/dev/src/sass/blocks/_b-contentNews.scss
+++ b/dev/src/sass/blocks/_b-contentNews.scss
@@ -1,6 +1,34 @@
 .b-contentNews {
 @include wrapper-inner;
 display:flex;
+justify-content: space-between;
 padding-top: 90px;
 padding-bottom: 90px;
+
+
+
+ &__column{
+    max-width: 550px;
+ }
+
+ &__title {
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 1.31;
+    color: #343434;
+    text-transform: uppercase;
+    padding-bottom: 20px;
+    margin-bottom: 40px;
+    margin-top: 0px;
+  
+    &--green {
+    border-bottom: 3px solid #18B0B6;
+    }
+
+    &--purple {
+    border-bottom: 3px solid #964EA9;
+    }
+}
+
+
 }
