--- a/dev/src/sass/blocks/_b-mainNavigation.scss
+++ b/dev/src/sass/blocks/_b-mainNavigation.scss
@@ -4,26 +4,27 @@
 .b-mainNavigation {
   display: flex;
   list-style-type: none;
+  margin: 0px;
+  padding: 0px;
+  
 
-
-
-  &__list {
-  color: #FFFFFF;
-  text-transform: uppercase;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 2.22;
-
+  &__item {
+    color: #FFFFFF;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 2.22;
   }
 
-    &__list:first-child{
+
+    &__item:first-child{
      padding-right: 39px;
      margin-right: 39px;
      border-right:1px solid rgba(100%, 100%, 100%, 0.41);
      }
 
 
-    &__list:last-child {
+    &__item:last-child {
    padding-left: 39px;
     margin-left: 39px;
     border-left: 1px solid rgba(100%, 100%, 100%, 0.41);
@@ -31,7 +32,41 @@
 
   &__link {
   text-decoration: none;
-    color: #FFFFFF;
+  color: #FFFFFF;
   }
+}
 
+
+
+.hvr-underline-from-left {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  overflow: hidden;
+}
+
+.hvr-underline-from-left:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  left: 0;
+  right: 100%;
+  bottom: 0;
+  background: #2098D1;
+  height: 4px;
+  -webkit-transition-property: right;
+  transition-property: right;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+
+.hvr-underline-from-left:hover:before,
+.hvr-underline-from-left:focus:before,
+.hvr-underline-from-left:active:before {
+  right: 0;
 }
