--- a/dev/src/sass/blocks/_b-mainNavigation.scss
+++ b/dev/src/sass/blocks/_b-mainNavigation.scss
@@ -55,7 +55,7 @@
   left: 0;
   right: 100%;
   bottom: 0;
-  background: #2098D1;
+  background: white;
   height: 4px;
   -webkit-transition-property: right;
   transition-property: right;
