--- a/dev/src/sass/blocks/_b-siteHeader.scss
+++ b/dev/src/sass/blocks/_b-siteHeader.scss
@@ -2,9 +2,12 @@
  * @section siteHeader
  */
 .b-siteHeader {
+  @include wrapper-inner;
   display: flex;
   justify-content: space-between;
   align-items: center;
   position: absolute;
+  left: 0;
+  right: 0;
   border-bottom: 1px solid rgba(100%,100%,100%,0.31);
 }
