--- a/dev/src/sass/main.scss
+++ b/dev/src/sass/main.scss
@@ -45,6 +45,16 @@
 @import 'blocks/b-siteFooterBlock';
 @import 'blocks/b-contentNews';
 @import 'blocks/b-siteForm';
+@import 'blocks/b-courseAside';
+@import 'blocks/b-buttonsBox';
+@import 'blocks/b-thumb';
+@import 'blocks/b-contentCourse';
+@import 'blocks/b-courseAside';
+@import 'blocks/b-courseTable';
+
+
+
+
 
 @import 'blocks/l-siteHeader';
 @import 'blocks/l-firstScreen';
@@ -52,6 +62,10 @@
 @import 'blocks/l-contentNews';
 @import 'blocks/l-siteFooter';
 @import 'blocks/l-siteLogo';
+@import 'blocks/l-courseFirstScreen';
+@import 'blocks/l-contentCourse';
+@import 'blocks/l-courseAside';
+
 
 
 @import 'blocks/l-wrapper';
